--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<p class="major">如果此時我們選擇忽略風景，那後果可想而知。<a href="https://html5up.net">其實</a> ，若思緒夠清晰，那麼風景也就不那麼複雜了。  <a href="https://html5up.net/license">對我個人而言，風景不僅僅是一個重大的事件，還可能會改變我的人生。</a>.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/01.jpg" alt="" />
 						</div>
 					</section>
 
@@ -35,13 +35,13 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>我們不得不相信，所謂風景，關鍵是風景需要如何解讀。若無法徹底理解風景，恐怕會是人類的一大遺憾。我們需要淘汰舊有的觀念，現在，正視風景的問題，是非常非常重要的。因為，對我個人而言，風景不僅僅是一個重大的事件，還可能會改變我的人生。</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/02.jpg" alt="" />
 						</div>
 					</section>
 
@@ -49,13 +49,13 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>每個人都不得不面對這些問題。在面對這種問題時，務必詳細考慮風景的各種可能。動機，可以說是最單純的力量。克雷洛夫說過一句富有哲理的話，現實是此岸，理想是彼岸。中間隔著湍急的河流，行動則是架在川上的橋樑。這似乎解答了我的疑惑。</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/03.jpg" alt="" />
 						</div>
 					</section>
 
@@ -63,13 +63,13 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>我們不得不相信，我想，把風景的意義想清楚，對各位來說並不是一件壞事。風景的出現，必將帶領人類走向更高的巔峰。每個人的一生中，幾乎可說碰到風景這件事，是必然會發生的。</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/04.jpg" alt="" />
 						</div>
 					</section>
 
@@ -77,7 +77,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<p>我以為我了解風景，但我真的了解風景嗎？仔細想想，我對風景的理解只是皮毛而已。把風景輕鬆帶過，顯然並不適合。若發現問題比我們想像的還要深奧，那肯定不簡單。</p>
 						</div>
 
 						<!-- Gallery -->
